--- a/main.css
+++ b/main.css
@@ -180,17 +180,20 @@ body {
   fill: var(--page-content-txtColor);
 }
 input[type="search"] {
-  height: 26px;
+  height: 28px;
   border-radius: 8px;
-  margin-bottom: 5px;
+  margin-bottom: 8px;
   margin-right: 5px;
+  padding-left: 6px;
+  color: var(--page-content-txtColor);
   background-color: var(--page-header-txtColor);
 }
 .search {
-  position: absolute;
-  top: 33%;
-  right: 13.8%;
-  height: 20px;
+  float: right;
+  margin-top: 12px;
+  margin-right: 18px;
+  border: none;
+  cursor: pointer;
 }
 .search-and-user form button {
   position: absolute;
