--- a/main.css
+++ b/main.css
@@ -4,14 +4,15 @@
   --page-header-bgColor: #242e42;
   --page-header-bgColor-hover: #1d2636;
   --page-header-txtColor: #dde9f8;
-  --page-header-headingColor: #7889a4;
   --page-header-width: 220px;
   --page-content-bgColor: #f0f1f6;
   --page-content-txtColor: #5f6e89;
-  --page-content-blockColor: #fff;
+  --saaral: #f9fafc;
+  --oronge: #ffa800;
+  --red: #fe5858;
   --white: #fff;
   --black: #333;
-  --blue: #00b9eb;
+  --blue: #81d4fa;
   --border-radius: 4px;
   --box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.075);
 }
@@ -75,7 +76,7 @@ body {
   right: 0;
   bottom: 0;
   overflow: auto;
-  padding-top: 20px;
+  padding-top: 8px;
   width: var(--page-header-width);
   color: var(--page-header-txtColor);
   background: var(--page-header-bgColor);
@@ -88,7 +89,7 @@ body {
 
 .page-header .logo {
   display: block;
-  margin: 0 15px;
+  margin: 0 20px;
 }
 
 .page-header .admin-menu {
@@ -100,7 +101,7 @@ body {
 
 .page-header .admin-menu li > * {
   width: 100%;
-  padding: 13px 15px;
+  padding: 13px 20px;
 }
 
 .page-header .admin-menu .menu-heading h3 {
@@ -139,6 +140,14 @@ body {
 .page-header .admin-menu button:focus svg {
   fill: var(--blue);
 }
+.dropdown-container {
+  display: none;
+  margin-left: 8px;
+}
+
+.icon-down {
+  float: right;
+}
 
 /* PAGE CONTENT STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -155,13 +164,12 @@ body {
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
-  background: var(--page-content-bgColor);
+  background: var(--white);
   position: relative;
   width: 100%;
   height: 50px;
   font-size: 1.5rem;
   padding-left: 15px;
-  background: var(--page-content-blockColor);
   box-shadow: var(--box-shadow);
 }
 
@@ -178,7 +186,7 @@ input[type="search"] {
   height: 28px;
   border-radius: 8px;
   margin-bottom: 8px;
-  margin-right: 5px;
+  margin-right: 18px;
   padding-left: 6px;
   color: var(--page-content-txtColor);
   background-color: var(--page-header-txtColor);
@@ -186,14 +194,14 @@ input[type="search"] {
 .search {
   float: right;
   margin-top: 12px;
-  margin-right: 18px;
+  margin-right: 29px;
   border: none;
   cursor: pointer;
 }
 .search-and-user form button {
   position: absolute;
   top: 50%;
-  right: 15px;
+  right: 17px;
   transform: translateY(-50%);
 }
 
@@ -205,15 +213,79 @@ input[type="search"] {
 .search-and-user .admin-profile svg {
   width: 32px;
   height: 32px;
+  margin-right: 10px;
+}
+.content {
+  width: 750px;
+  height: 43px;
+  border-bottom-style: solid;
+  border-bottom-width: thin;
+  border-color: rgb(174, 188, 201);
+  margin-top: 4%;
+  margin-left: 15%;
+}
+.dropdown-btn {
+  display: flex;
+  align-items: center;
+}
+.content .dropdown-container {
+  margin-top: 20px;
+}
+.content .dropdown-container > a {
+  display: inline-block;
+  margin-right: 25px;
+}
+.project-card {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border-radius: 15px;
+  text-align: center;
+  overflow: auto;
+  background-color: var(--blue);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+.project-plus {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border-radius: 15px;
+  text-align: center;
+  overflow: auto;
+  border-style: dashed;
+  border-width: 2px;
 }
 
-.dropdown-container {
-  display: none;
-  margin-left: 8px;
+.project-card:hover,
+.project-card:focus {
+  fill: var(--blue);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
-
-.icon-down {
-  float: right;
+.dropdown-container svg {
+  width: 40px;
+  height: auto;
+  margin: auto;
+  margin-top: 28%;
+}
+.project-plus:hover,
+.project-plus:focus {
+  background-color: #f3f3f3;
+  transform: translateY(-1px);
+  transition: 0.3s;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.project-name {
+  margin-top: 10px;
+  text-align: center;
 }
 /* MQ RULES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+@media screen and (max-height: 450px) {
+  .sidebar {
+    padding-top: 15px;
+  }
+  .sidebar a {
+    font-size: 18px;
+  }
+}
