--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
   --page-content-txtColor: #5f6e89;
   --saaral: #f9fafc;
   --oronge: #ffa800;
-  --red: #fe5858;
+  --red: #ff6a6a;
   --white: #fff;
   --black: #333;
   --blue: #81d4fa;
@@ -243,7 +243,7 @@ input[type="search"] {
   text-align: center;
   overflow: auto;
   background-color: var(--blue);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
 .project-plus {
@@ -258,9 +258,12 @@ input[type="search"] {
 }
 
 .project-card:hover,
-.project-card:focus {
-  fill: var(--blue);
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+.project-card:focus,
+.project-plus:hover,
+.project-plus:focus {
+  transform: translateY(-1px);
+  box-shadow: 0 7px 14px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
 }
 .dropdown-container svg {
   width: 40px;
@@ -268,19 +271,187 @@ input[type="search"] {
   margin: auto;
   margin-top: 28%;
 }
-.project-plus:hover,
-.project-plus:focus {
-  background-color: #f3f3f3;
-  transform: translateY(-1px);
-  transition: 0.3s;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
+
 .project-name {
   margin-top: 10px;
   text-align: center;
 }
-/* MQ RULES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* ––––––––– Column ––––––––––––––– */
+.card-columns {
+  box-sizing: border-box;
+  overflow: auto;
+  margin: 0px 39px;
+  margin-top: 25px;
+  width: auto;
+  height: 100%;
+  display: flex;
+}
+.column {
+  background: #ffffff;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  border-radius: 4px;
+  margin-left: 14px;
+  width: 320px;
+  min-height: 630px;
+}
+.card-header {
+  height: 50px;
+  border-color: #c4c4c473;
+  width: 100%;
+  border-bottom-style: solid;
+  border-bottom-width: thin;
+  display: inline-flex;
+}
+.column-name {
+  cursor: pointer;
+  width: 65%;
+  margin: auto;
+  border-radius: 5px;
+  margin-left: 7%;
+  padding-left: 4px;
+}
+.plus-card {
+  margin: auto;
+  height: 50%;
+  cursor: pointer;
+  width: 10%;
+  border-radius: 5px;
+  margin-left: 5%;
+}
+.edit-card {
+  margin: auto;
+  width: 12%;
+  height: 50%;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 5%;
+}
+.plus-card svg {
+  margin: auto;
+  margin-top: 5px;
+}
+.edit-card svg {
+  margin: auto;
+}
+.cards {
+  width: 85%;
+  margin: auto;
+  margin-top: 7%;
+}
+.card {
+  border: 1px solid rgb(235, 235, 235);
+  width: 100%;
+  height: 110px;
+  margin-top: 6%;
+  background: #ffffff;
+  box-shadow: 1px 1px 2px rgba(131, 131, 131, 0.2);
+  border-radius: 2px;
+  padding: 5%;
+}
+
+.card-title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 21px;
+  letter-spacing: 0.75px;
+  color: rgba(95, 110, 137, 0.8);
+}
+.card-date {
+  margin: auto;
+  display: flex;
+  margin-top: 2%;
+}
+.card-date p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 21px;
+  letter-spacing: 0.75px;
+  color: #040404;
+  opacity: 0.4;
+}
+.card-assign {
+  text-align: center;
+  display: flex;
+  margin-top: 3%;
+}
+.card-profile {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+}
+.card-assign p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  margin-left: 6px;
+  margin-top: auto;
+  margin-bottom: auto;
+  letter-spacing: 0.75px;
+  color: rgba(95, 110, 137, 0.8);
+}
+.card-level {
+  margin-left: auto;
+  background: var(--red);
+  border-radius: 100px;
+  width: 30%;
+  height: 90%;
+}
+.card-level > p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 0.75px;
+  color: #ffffff;
+  margin: auto;
+  opacity: 0.87;
+}
+.card:hover,
+.card:focus {
+  background: var(--saaral);
+  cursor: pointer;
+  transition: 0.3s;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+}
+.add-task {
+  display: flex;
+  text-align: center;
+  width: 100%;
+  overflow: auto;
+  height: auto;
+  margin-top: 10px;
+  border-radius: 5px;
+  padding-left: 21%;
+}
+.add-task svg {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.add-task p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  color: rgba(95, 110, 137, 0.8);
+  margin-left: 5px;
+}
+.column-name:hover,
+.column-name:focus,
+.edit-card:hover,
+.edit-card:focus,
+.plus-card:hover,
+.plus-card:focus {
+  background-color: #f5f5f5;
+  transition: 0.2s;
+}
+.add-task:hover,
+.add-task:focus {
+  background-color: #f5f5f5;
+  transition: 0.2s;
+}
 @media screen and (max-height: 450px) {
   .sidebar {
     padding-top: 15px;
