--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
   --page-content-bgColor: #f0f1f6;
   --page-content-txtColor: #5f6e89;
   --saaral: #f9fafc;
+  --green: #23cb51;
   --oronge: #ffa800;
   --red: #ff6a6a;
   --white: #fff;
@@ -276,6 +277,36 @@ input[type="search"] {
   margin-top: 10px;
   text-align: center;
 }
+/* ––––––––– project menu ––––––––––––––– */
+.project-menu {
+  width: 100%;
+  height: 50px;
+  background: #fffdfd;
+}
+.project-bar {
+}
+.project-bar li {
+  float: left;
+  margin: 10px 14px;
+}
+.project-bar li a {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+  color: rgba(95, 110, 137, 0.8);
+  mix-blend-mode: normal;
+}
+.project-bar li a:hover,
+.project-bar li a:focus {
+  color: var(--blue);
+}
+.project-bar li a :active {
+  color: var(--blue);
+}
 /* ––––––––– Column ––––––––––––––– */
 .card-columns {
   box-sizing: border-box;
@@ -394,10 +425,19 @@ input[type="search"] {
 }
 .card-level {
   margin-left: auto;
-  background: var(--red);
+
   border-radius: 100px;
   width: 30%;
   height: 90%;
+}
+.high {
+  background: var(--red);
+}
+.easy {
+  background: var(--green);
+}
+.meduim {
+  background: var(--oronge);
 }
 .card-level > p {
   font-style: normal;
