--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
   --white: #fff;
   --black: #333;
   --blue: #81d4fa;
+  --hoverColor: #f5f5f5;
   --border-radius: 4px;
   --box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.075);
 }
@@ -283,8 +284,6 @@ input[type="search"] {
   height: 50px;
   background: #fffdfd;
 }
-.project-bar {
-}
 .project-bar li {
   float: left;
   margin: 10px 14px;
@@ -318,7 +317,7 @@ input[type="search"] {
   display: flex;
 }
 .column {
-  background: #ffffff;
+  background: var(--white);
   border: 1px solid #dcdcdc;
   display: inline-block;
   border-radius: 4px;
@@ -387,7 +386,7 @@ input[type="search"] {
   font-size: 15px;
   line-height: 21px;
   letter-spacing: 0.75px;
-  color: rgba(95, 110, 137, 0.8);
+  color: var(--page-content-txtColor);
 }
 .card-date {
   margin: auto;
@@ -421,7 +420,7 @@ input[type="search"] {
   margin-top: auto;
   margin-bottom: auto;
   letter-spacing: 0.75px;
-  color: rgba(95, 110, 137, 0.8);
+  color: var(--page-content-txtColor);
 }
 .card-level {
   margin-left: auto;
@@ -446,7 +445,7 @@ input[type="search"] {
   line-height: 21px;
   text-align: center;
   letter-spacing: 0.75px;
-  color: #ffffff;
+  color: var(--white);
   margin: auto;
   opacity: 0.87;
 }
@@ -475,7 +474,7 @@ input[type="search"] {
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
-  color: rgba(95, 110, 137, 0.8);
+  color: var(--page-content-txtColor);
   margin-left: 5px;
 }
 .column-name:hover,
@@ -484,14 +483,92 @@ input[type="search"] {
 .edit-card:focus,
 .plus-card:hover,
 .plus-card:focus {
-  background-color: #f5f5f5;
+  background-color: var(--hoverColor);
   transition: 0.2s;
 }
 .add-task:hover,
 .add-task:focus {
-  background-color: #f5f5f5;
+  background-color: var(--hoverColor);
   transition: 0.2s;
 }
+/* -------task-------- */
+.task-bar {
+  width: 100%;
+  background: var(--white);
+  border: 1px solid rgb(212, 212, 212);
+  box-sizing: border-box;
+  height: 40px;
+}
+.task-menu {
+  margin-top: 5px;
+}
+.task-menu li {
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 1.25px;
+  color: var(--page-content-txtColor);
+  display: inline;
+  margin-left: 50px;
+  text-transform: uppercase;
+  color: var(--page-content-txtColor);
+}
+.task-menu :first-child {
+  margin-left: 30px;
+  padding-right: 45%;
+}
+.task-menu :nth-child(3) {
+  margin-left: 5%;
+}
+
+.tasks {
+  width: 95%;
+  height: 35px;
+  margin: auto;
+  border-bottom: 1px solid rgb(212, 212, 212);
+}
+.task-btn {
+  margin-top: 10px;
+}
+.tasks span {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+  color: #040404;
+}
+.tasks svg {
+  margin-right: 10px;
+}
+.task {
+  margin: auto;
+  margin-top: 10px;
+}
+.one-task {
+  border-bottom: 1px solid rgb(212, 212, 212);
+  display: flex;
+  padding-left: 3%;
+}
+.tasks p {
+  margin-top: 2px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 1.2px;
+  line-height: 35px;
+}
+.date {
+  margin-left: 55%;
+  margin-top: 18px;
+}
+.project-task {
+  margin-left: 6%;
+}
+
 @media screen and (max-height: 450px) {
   .sidebar {
     padding-top: 15px;
