--- a/public/css/main.css
+++ b/public/css/main.css
@@ -218,6 +218,8 @@ input[type="search"] {
   height: 32px;
   margin-right: 10px;
 }
+
+/* -----content-------- */
 .content {
   width: 750px;
   height: 43px;
