--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,79 +1,117 @@
 body {
   background: rgba(249, 250, 252, 0.81);
+  font-family: "Roboto", sans-serif;
+}
+
+.logo {
+  display: flex;
+  width: 200px;
+  height: auto;
+  margin: auto;
+  margin-bottom: 5%;
+}
+a {
+  text-decoration: none;
 }
 .container {
   margin: auto;
-  margin-top: 120px;
-  width: 420px;
+  padding: 10px 20px;
+  width: 340px;
   text-align: center;
-  height: 500px;
   background: #ffffff;
-  border-radius: 10px;
-  box-shadow: -5px -3px 4px rgba(0, 0, 0, 0.11),
-    4px 4px 3px 2px rgba(6, 6, 6, 0.09);
+  height: 100%;
+  box-shadow: -5px -3px 4px rgba(0, 0, 0, 0.03),
+    4px 4px 3px 2px rgba(6, 6, 6, 0.03);
 }
-.username {
-  width: 95%;
-  height: 45px;
-  margin-top: 30px;
-  background: rgba(249, 250, 252, 0.81);
-  border: 1px solid rgba(95, 110, 137, 0.5);
-  box-sizing: border-box;
-  border-radius: 15px;
-  left: 3.8%;
-  right: 20.54%;
-  top: 38.89%;
-  bottom: 9.26%;
-  /* BUTTON - med 14 (16px, 1.25px) */
-  font-family: Roboto;
-  font-style: normal;
+.container > p {
+  color: rgba(17, 17, 17, 0.5);
+  margin-top: 20px;
+  margin-bottom: 30px;
   font-weight: 500;
-  line-height: 15px;
-  /* or 114% */
-  text-align: center;
-
-  letter-spacing: 1.25px;
 }
-.password {
-  width: 95%;
+
+.form .input {
+  margin-top: 25px;
   height: 45px;
-  margin-top: 30px;
-  background: rgba(249, 250, 252, 0.81);
-  border: 1px solid rgba(95, 110, 137, 0.5);
+  background: rgba(255, 255, 255, 0.81);
+  border: 1px solid rgba(103, 117, 141, 0.5);
   box-sizing: border-box;
   border-radius: 15px;
-  font-family: Roboto;
-  font-style: normal;
+  padding: 10px 10px;
+  display: flex;
+}
+.form .input input {
   font-weight: 500;
   font-size: 14px;
-  line-height: 16px;
-  /* or 114% */
-
-  text-align: center;
-  letter-spacing: 1.25px;
-  text-transform: uppercase;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 1.1px;
+  border: none;
+  color: rgba(17, 17, 17, 0.7);
 }
-.login {
-  width: 395px;
-  height: 40px;
-  margin-top: 25px;
+.form .input input:focus {
+  outline: none;
+}
+.form .button {
   background: #ffa800;
-  border-radius: 10px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 21px;
-  /* or 117% */
-
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.1px;
-
+  border: none;
+  width: 100%;
   color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  border-radius: 10px;
+  margin-top: 50px;
+  padding: 10px 0;
+  font-size: 18px;
+  cursor: pointer;
 }
-.user {
+.google {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  text-align: center;
+  background: rgba(249, 250, 252, 0.81);
+  border-radius: 8px;
+  border: 1px solid rgba(83, 96, 119, 0.5);
+  margin-left: 20px;
+  margin-left: 0;
+}
+.google p {
+  margin: auto;
+  color: rgba(34, 39, 46, 0.5);
+  font-size: 18px;
+  font-weight: 600;
+}
+.google img {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 3%;
+  width: 24px;
+  height: 24px;
+}
+
+.register {
+  margin-top: 30px;
+  padding-bottom: 25px;
+}
+.register a {
+  color: #ffa800;
+  text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+.hero-image-1 {
+  width: 400px;
+  height: 450px;
   position: absolute;
-  top: 23%;
-  right: 36%;
+  left: 0%;
+  margin-top: 10%;
+}
+.hero-image-2 {
+  position: absolute;
+  right: 0%;
+  width: 400px;
+  height: 300px;
+  margin-top: 8%;
 }
