--- a/home.css
+++ b/home.css
@@ -1,72 +1,130 @@
-:root {
-  --page-header-bgColor: #242e42;
-  --page-header-bgColor-hover: #1d2636;
-  --page-header-txtColor: #dde9f8;
-  --page-header-width: 220px;
-  --page-content-bgColor: #f0f1f6;
-  --page-content-txtColor: #5f6e89;
-  --saaral: #f9fafc;
-  --green: #23cb51;
-  --oronge: #ffa800;
-  --red: #ff6a6a;
-  --white: #fff;
-  --black: #333;
-  --blue: #81d4fa;
-  --border-radius: 4px;
-  --box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.075);
+*{
+    padding: 0;
+    margin: 0;
+    font-family: var(--Quicksand);
+}
+body{
+    position: relative;
+width: 1440px;
+height: 1024px;
+background: #FFFFFF;
+}
+.nav-container {
+    position: relative;
+    height: 150px;
+  }
+  .nav-container .logo {
+    position: absolute;
+left: -7.19%;
+right: 11.82%;
+top: 19.05%;
+bottom: -5.16%;
+
+font-family: Sarabun;
+font-style: normal;
+font-weight: normal;
+font-size: 24px;
+line-height: 16px;
+/* or 67% */
+
+text-align: center;
+letter-spacing: 1.25px;
+text-transform: uppercase;
+
+/* Main/Orange */
+
+color: #FFA800;
+
+mix-blend-mode: normal;
+  }
+  .nav-container .logo h1 {
+    color: #54cbf0;
+    font-weight: 300;
+    text-transform: uppercase;
+    font-size: 50px;
+  }
+  .nav-container .logo img{
+    padding-top: 12px;
+    height: 100%;
+  }
+
+.hero-container{
+    position: absolute;
+width: 445.63px;
+height: 165.13px;
+
+font-family: Timmana;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 16px;
+/* or 80% */
+
+text-align: center;
+letter-spacing: 1.25px;
+text-transform: uppercase;
+
+color: #000000;
+
+transform: rotate(0.29deg);
+}
+.right{
+    position: absolute;
+width: 1440px;
+height: 914px;
+
+background: url(image.png);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-* {
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+.wrapper{
+    background: rgba(255, 254, 254, 0.6);
+    padding: 1.2rem;
 }
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Style the top navigation bar */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-/* Style the topnav links */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
+.wrapper{
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
+  
+  /* menuButton */
+  
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 19px;
+  line-height: 21px;
+  /* or 111% */
+  
+  display: flex;
+  align-items: center;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+  letter-spacing: 0.1px;
+  
+  /* har */
+  
+  color: #040404;
+}
+.wrapper{
+    padding: 0.8rem 0 0.2rem 0;
+    text-align: center;
+}
+.wrapper{
+    text-transform: uppercase;
+    font-family: Roboto;
+font-style: normal;
+    letter-spacing: 1px;
+    font-weight: 500;
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+    padding: 0.4rem 0.1rem;
+    letter-spacing: 3px;
+    transition: opacity 0.5s ease;
 }
 
-/* Change color on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Style the content */
-.content {
-  background-color: #ddd;
-  padding: 10px;
-  height: 700px; /* Should be removed. Only for demonstration */
-  background: url("home.png");
-  background-size: cover;
-  text-align: center;
-  padding-top: 300px;
-}
-.login-btn {
-  background: #ffa800;
-  border-radius: 10px;
-  width: 100px;
-
-  margin-left: 75%;
-}
-/* Style the footer */
-.footer {
-  background-color: #f1f1f1;
-  padding: 10px;
+.wrapper{
+    background: rgb(255, 255, 255);
+    padding: 1.2rem;
 }
