--- a/public/css/login.css
+++ b/public/css/login.css
@@ -64,16 +64,25 @@ a {
   font-size: 18px;
   cursor: pointer;
 }
+.form .button:hover,
+.button:focus {
+  background: #ffb114;
+  transform: 0.1s;
+}
 .google {
   width: 100%;
   height: 40px;
   display: flex;
   text-align: center;
-  background: rgba(249, 250, 252, 0.81);
+  background: rgb(252, 252, 252);
   border-radius: 8px;
-  border: 1px solid rgba(83, 96, 119, 0.5);
+  border: 1px solid rgba(226, 226, 226, 0.5);
   margin-left: 20px;
   margin-left: 0;
+}
+.google:hover,
+.google:focus {
+  background: white;
 }
 .google p {
   margin: auto;
@@ -91,9 +100,13 @@ a {
 
 .register {
   margin-top: 30px;
-  padding-bottom: 25px;
+  height: 25px;
+  text-align: center;
+  margin-bottom: 10px;
+  border-radius: 10px;
 }
 .register a {
+  align-items: center;
   color: #ffa800;
   text-transform: uppercase;
   font-family: "Roboto", sans-serif;
@@ -101,8 +114,12 @@ a {
   font-weight: 500;
   letter-spacing: 1px;
 }
+.register:hover,
+.register:focus {
+  background: rgb(241, 241, 241);
+}
 .hero-image-1 {
-  width: 400px;
+  width: 30%;
   height: 450px;
   position: absolute;
   left: 0%;
@@ -111,7 +128,7 @@ a {
 .hero-image-2 {
   position: absolute;
   right: 0%;
-  width: 400px;
+  width: 30%;
   height: 300px;
   margin-top: 8%;
 }
