--- a/public/css/main.css
+++ b/public/css/main.css
@@ -289,6 +289,10 @@ input[type="search"] {
   text-align: center;
 }
 /* ––––––––– project menu ––––––––––––––– */
+article {
+  width: 100%;
+  height: 100%;
+}
 .project-menu {
   width: 100%;
   height: 50px;
@@ -390,6 +394,7 @@ input[type="search"] {
   box-shadow: 1px 1px 2px rgba(131, 131, 131, 0.2);
   border-radius: 2px;
   padding: 5%;
+  border-radius: 4px;
 }
 
 .card-title {
@@ -463,8 +468,9 @@ input[type="search"] {
 .card:focus {
   background: var(--saaral);
   cursor: pointer;
-  transition: 0.3s;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.15s;
+
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14);
 }
 .add-task {
   display: flex;
@@ -854,6 +860,161 @@ textarea {
   font-size: 14px;
   margin-left: 20px;
 }
+
+/* ---------project dashboard ----------- */
+
+.project-details {
+  display: flex;
+  width: 95%;
+  height: 220px;
+  margin: auto;
+  margin-top: 3%;
+}
+.one-detail {
+  width: 25%;
+  height: 125px;
+  text-align: center;
+  background: white;
+  border: 1px solid var(--border-color);
+  border-radius: 8px;
+  padding: 20px;
+  margin: 0px 10px;
+}
+.project-details :first-child {
+  margin-left: 0px;
+}
+.one-detail p {
+  font-weight: normal;
+  font-size: 19px;
+  line-height: 21px;
+  margin-bottom: 10px;
+  letter-spacing: 0.1px;
+  color: rgba(95, 110, 137, 0.8);
+}
+.one-detail span {
+  font-weight: bold;
+  font-size: 35px;
+  letter-spacing: 1px;
+  color: #252733;
+}
+.dashboards {
+  width: 95%;
+  margin: auto;
+  display: flex;
+}
+.dashboard1 {
+  position: relative;
+  display: flex;
+  width: 57%;
+  height: 350px;
+  border-radius: 8px;
+  background: #ffffff;
+  border: 1px solid #dcdcdc;
+}
+.dashes {
+  width: 90%;
+  margin: auto;
+  margin-bottom: 0;
+  display: flex;
+}
+.dash1,
+.dash2,
+.dash3 {
+  position: relative;
+  width: 64px;
+  margin: auto;
+  margin-bottom: 0%;
+  text-align: center;
+}
+.dash1,
+.dash2,
+.dash3 p {
+  font-size: 13px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 0.4px;
+  color: #9e9e9e;
+}
+.dashboard2 {
+  width: 40%;
+  height: 350px;
+  border-radius: 8px;
+  background: #ffffff;
+  border: 1px solid #dcdcdc;
+  margin-left: auto;
+  margin-right: auto;
+}
+.project-score {
+  position: absolute;
+  bottom: 0;
+  height: auto;
+  width: 100%;
+}
+.column-score {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.score-border {
+  width: 90%;
+  margin: auto;
+  border-bottom: 1px solid var(--border-color);
+}
+.project-score p {
+  font-size: 13px;
+  letter-spacing: 0.4px;
+  color: rgba(0, 0, 0, 0.24);
+  margin-left: 10px;
+}
+
+.dash-column {
+  position: relative;
+  border-radius: 10px 10px 0px 0px;
+}
+.green {
+  height: 312px;
+  background: #23cb51;
+}
+.oronge {
+  height: 190px;
+  background: var(--oronge);
+}
+.red {
+  height: 190px;
+  background: #fe5858;
+}
+
+.score-board {
+  display: block;
+  width: 200px;
+  height: 200px;
+  border-left: 24px solid rgba(236, 236, 236, 0.514);
+  border-top: 24px solid rgba(236, 236, 236, 0.514);
+  border-right: 24px solid #23cb51;
+  border-bottom: 24px solid #23cb51;
+  margin: auto;
+  margin-top: 15%;
+  border-radius: 50%;
+  text-align: center;
+  align-items: center;
+}
+.score {
+  position: relative;
+  display: flex;
+  width: 80%;
+  height: 95%;
+  margin: auto;
+  align-items: center;
+}
+.score p {
+  font-size: 34px;
+  line-height: 51px;
+  letter-spacing: 0.25px;
+  color: rgba(95, 110, 137, 0.8);
+  margin: auto;
+}
+
 @media screen and (max-height: 450px) {
   .sidebar {
     padding-top: 15px;
