--- a/public/css/main.css
+++ b/public/css/main.css
@@ -773,7 +773,7 @@ article {
   display: inherit;
   align-items: center;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 20px;
 }
 .messageDet p {
   margin-left: 7px;
@@ -858,7 +858,7 @@ textarea {
 .messageDate {
   color: rgb(139, 139, 139);
   font-size: 14px;
-  margin-left: 20px;
+  margin-right: 15px;
 }
 
 /* ---------project dashboard ----------- */
@@ -1014,7 +1014,195 @@ textarea {
   color: rgba(95, 110, 137, 0.8);
   margin: auto;
 }
+.status {
+  display: flex;
+  width: 97%;
+  align-items: center;
+  justify-content: space-between;
+}
+.left-status {
+  display: flex;
+  width: 100px;
+  height: 30px;
+  align-items: center;
+}
+.right-status {
+  display: flex;
+  width: 100px;
+  height: 30px;
+  align-items: center;
+}
+.status span {
+  margin-right: 10px;
+  margin-left: auto;
+  width: 8px;
+  height: 8px;
+  border-radius: 4px;
+  background: var(--green);
+}
+.status p {
+  font-size: 17px;
+  line-height: 21px;
+  color: rgba(95, 110, 137, 0.8);
+}
+/* ----overview----- */
 
+.members {
+  background: #fff;
+  padding: 15px 0;
+  margin-top: 30px;
+}
+.members h1 {
+  font-weight: 400;
+  font-size: 18px;
+  padding-left: 30px;
+  padding-bottom: 40px;
+  color: rgba(95, 110, 137, 0.8);
+}
+.members-table {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.table {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  font-size: 14px;
+}
+.table li {
+  height: 42px;
+  font-weight: 500;
+  padding: 0 30px;
+  padding-top: 5px;
+  color: rgba(55, 63, 78, 0.8);
+  border-bottom: 1px solid rgba(95, 110, 137, 0.2);
+}
+.table li:first-child {
+  color: rgba(126, 123, 122, 0.8);
+}
+.table-flex {
+  display: flex;
+  align-items: center;
+  padding-top: 0 !important;
+}
+.table span {
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  padding: 6px;
+  padding-top: 4px;
+  font-size: 14px;
+  margin-right: 3px;
+  font-weight: 400;
+  border-radius: 50%;
+}
+.table-body li a {
+  position: relative;
+  background: var(--oronge);
+  color: #fff;
+  padding: 1px 17px;
+  border-radius: 1000px;
+}
+.table-body li:last-child {
+  padding-left: 0%;
+  padding-right: 0%;
+}
+.table-cyan {
+  background: #00d4c8;
+}
+.table-yellow {
+  background: #f7a302;
+}
+.table-blue {
+  background: #0064fb;
+}
+.table-head {
+  border-top: 1px solid rgba(95, 110, 137, 0.2);
+  font-size: 13px;
+}
+/* ------reports-------- */
+.block-container {
+  display: grid;
+  grid-gap: 25px;
+  position: relative;
+  grid-template-columns: repeat(3, 1fr);
+  background: #fff;
+  width: 95%;
+  margin: 35px auto;
+  border-radius: 10px;
+  border: 1px solid var(--border-color);
+  padding: 90px 35px;
+}
+.block {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  padding: 30px 20px;
+  background: #fff;
+  border-radius: 5px;
+  transition: background 0.3s ease-in-out;
+}
+.block:hover {
+  background: #f7f7f8;
+}
+.block-name {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8px;
+}
+.block-name h1 {
+  font-size: 22px;
+  font-weight: 500;
+}
+.block-name svg {
+  width: 15px;
+  fill: var(--black);
+  cursor: pointer;
+}
+.block-email {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--black);
+}
+.block-desc {
+  margin-top: 50px;
+  margin-bottom: 70px;
+  font-size: 15px;
+  font-weight: 400;
+  color: #4e4e4e;
+}
+.block-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.block-bottom h2 {
+  font-size: 14px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: var(--oronge);
+  cursor: pointer;
+}
+.block-red {
+  display: flex;
+  align-items: center;
+  background: #efdada;
+  padding: 0 8px;
+  padding-right: 12px;
+  border-radius: 1000px;
+  height: 30px;
+  cursor: pointer;
+}
+.block-red p {
+  font-size: 14px;
+  color: #de5552;
+}
+.block-red svg {
+  width: 20px;
+  margin-right: 8px;
+  fill: #de5552;
+}
 @media screen and (max-height: 450px) {
   .sidebar {
     padding-top: 15px;
